kubernetes/ingress/open-webui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: open-webui
spec:
  headers:
    sslRedirect: true
    sslHost: openwebui.ebruno.fr
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-ingress
  namespace: open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`openwebui.ebruno.fr`)
      middlewares:
        - name: security-headers
      services:
        - name: open-webui
          namespace: open-webui
          port: http
  tls:
    certResolver: letsencrypt-ovh
